--- a/index.html
+++ b/index.html
@@ -195,13 +195,13 @@
                 </div>
                 <div class="container border rounded mt-2 signIn-google p-3" onclick="googleSignIn()">
                     <div class="row">
-                        <div class="col text-center d-flex align-items-center">
-                                <div class="d-inline-flex justify-content-start">
-                                    <img src="img/symbol_google.svg" width="30" height="30">
-                                </div>
-                                <div class="col d-inline-flex justify-content-center">
-                                    <label>Sign in with Google</label>
-                                </div>
+                        <div class="col d-flex align-items-center">
+                            <div class="d-inline-flex justify-content-start">
+                                <img src="img/symbol_google.svg" width="30" height="30">
+                            </div>
+                            <div class="col d-inline-flex justify-content-center">
+                                <label>Sign in with Google</label>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -251,7 +251,7 @@
         <div id="clients" style="display:none;">
             <div id="sortClientsSelectContainer" class="container-fluid">
                 <div class="row">
-                    <div class="col m-1 mb-3">
+                    <div class="col m-2">
                         <select id="selectSortClients" class="form-select form-select-sm" onchange="changeSortClients()">
                             <option value="Recents" selected>Recents</option>
                             <option value="Fidelity">Fidelity</option>
