--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="container border rounded mt-2 signIn-google p-3" onclick="googleSignIn()">
+                <div id="googleSignIn" class="container border rounded mt-3 signIn-google p-3" onclick="googleSignIn()">
                     <div class="row">
                         <div class="col d-flex align-items-center">
                             <div class="d-inline-flex justify-content-start">
