--- a/index.html
+++ b/index.html
@@ -598,6 +598,41 @@
         </div>
     </div>
 
+    <div id="detailClient" style="display:none;">
+        <div class="container">
+            <div class="row mt-3">
+                <div class="col">
+                    <h1 id="detailClientTitle"></h1>
+                </div>
+            </div>
+            <div class="row mt-2">
+                <div class="col-md p-1">
+                    <div class="row">
+                        <div class="col m-1">
+                            <img src="img/symbol_email.svg" width="30" height="30">
+                            <label id="detailClientEmail"></label>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col m-1">
+                            <img src="img/symbol_phone.svg" width="30" height="30">
+                            <label id="detailClientPhone"></label>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col m-1">
+                            <img src="img/symbol_birthYear.svg" width="30" height="30">
+                            <label id="detailClientBirthYear"></label>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="detailPerformedService" style="display:none;">
+    </div>
+
     <script src="startup.js"></script>
     <script src="navigate.js"></script>
     <script src="dataView.js"></script>
