--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
     </div>
 
     <div id="workSpace" style="display: none;">
-        <div id="home">
+        <div id="Home">
             <div id="noBookings" class="container-fluid" style="display:none;">
                 <div class="row">
                     <div class="col text-center m-5">
@@ -241,12 +241,12 @@
             </div>
             <div id="pendingBookings" class="container-fluid"></div>
         </div>
-        <div id="performedServices" style="display:none;">
+        <div id="PerformedServices" style="display:none;">
             <div id="performedServicesContainer" class="container-fluid">
 
             </div>
         </div>
-        <div id="clients" style="display:none;">
+        <div id="Clients" style="display:none;">
             <div id="sortClientsSelectContainer" class="container-fluid">
                 <div class="row">
                     <div class="col m-2">
@@ -296,7 +296,7 @@
                     </div>
                     <div class="row">
                         <div class="col mt-1 text-right">
-                            <label class="text-link" onclick="newClientFromNewBooking()">+ New client</a>
+                            <label class="text-link" onclick="newClientFromNewBooking()">+ New client</label>
                         </div>
                     </div>
                     <div id="alertClient" class="row p-1" style="display: none;">
@@ -599,30 +599,106 @@
     </div>
 
     <div id="detailClient" style="display:none;">
-        <div class="container">
+        <div class="container-fluid fixed-top">
             <div class="row mt-3">
-                <div class="col">
-                    <h1 id="detailClientTitle"></h1>
+                <div class="col-2">
+                    <img src="img/symbol_back.svg" width="30" height="30" onclick="backDetailClient()">
+                </div>
+                <div class="col-8 text-center">
+                    <h1 id="detailCustomerTitle"></h1>
+                </div>
+                <div class="col-2 d-flex justify-content-end">
+                    <img src="img/symbol_more.svg" width="35" height="35">
                 </div>
             </div>
-            <div class="row mt-2">
-                <div class="col-md p-1">
+        </div>
+        <div class="continer-fluid body-scroll">
+            <div class="row m-2">
+                <div class="col p-2">
                     <div class="row">
                         <div class="col m-1">
-                            <img src="img/symbol_email.svg" width="30" height="30">
-                            <label id="detailClientEmail"></label>
+                            <h2>Informations</h2>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col m-1">
-                            <img src="img/symbol_phone.svg" width="30" height="30">
-                            <label id="detailClientPhone"></label>
+                        <div class="col-2 col-md-1 m-1 text-center">
+                            <img src="img/symbol_email.svg" width="25" height="25">
+                        </div>
+                        <div class="col d-flex align-self-center">
+                            <label id="detailCustomerEmail"></label>
                         </div>
                     </div>
                     <div class="row">
+                        <div class="col-2 col-md-1 m-1 text-center">
+                            <img src="img/symbol_phone.svg" width="25" height="25">
+                        </div>
+                        <div class="col d-flex align-self-center">
+                            <label id="detailCustomerPhone"></label>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-2 col-md-1 m-1 text-center">
+                            <img src="img/symbol_birthYear.svg" width="25" height="25">
+                        </div>
+                        <div class="col d-flex align-self-center">
+                            <label id="detailCustomerBirthYear"></label>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row m-2">
+                <div class="col p-2">
+                    <div class="row">
                         <div class="col m-1">
-                            <img src="img/symbol_birthYear.svg" width="30" height="30">
-                            <label id="detailClientBirthYear"></label>
+                            <h2>Data</h2>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-2 col-md-1 m-1 text-center">
+                            <img src="img/symbol_euro.svg" width="25" height="25">
+                        </div>
+                        <div class="col d-flex align-self-center">
+                            <label id="detailCustomerExpense"></label>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-2 col-md-1 m-1 text-center">
+                            <img src="img/symbol_performedServices.svg" width="25" height="25">
+                        </div>
+                        <div class="col d-flex align-self-center">
+                            <label id="detailCustomerPerformedServices"></label>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-2 col-md-1 m-1 text-center">
+                            <img src="img/symbol_average.svg" width="25" height="25">
+                        </div>
+                        <div class="col d-flex align-self-center">
+                            <label id="detailCustomerAvgExpense"></label>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-2 col-md-1 m-1 text-center">
+                            <img src="img/symbol_percent.svg" width="25" height="25">
+                        </div>
+                        <div class="col d-flex align-self-center">
+                            <label id="detailCustomerPercent"></label>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-2 col-md-1 m-1 text-center">
+                            <img src="img/symbol_lastService.svg" width="25" height="25">
+                        </div>
+                        <div class="col d-flex align-self-center">
+                            <label id="detailCustomerLastService"></label>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-2 col-md-1 m-1 text-center">
+                            <img src="img/symbol_firstService.svg" width="25" height="25">
+                        </div>
+                        <div class="col d-flex align-self-center">
+                            <label id="detailCustomerFirstService"></label>
                         </div>
                     </div>
                 </div>
