--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                         <div class="col m-1">
                             <div class="row">
                                 <div class="col">
-                                    <label>Client</label>
+                                    <label>Client *</label>
                                 </div>
                             </div>
                         </div>
@@ -313,7 +313,7 @@
                 <div class="col mb-3">
                     <div class="row">
                         <div class="col m-1">
-                            <label>Date</label>
+                            <label>Date *</label>
                         </div>
                     </div>
                     <div class="row">
@@ -383,7 +383,7 @@
                         <div class="col m-1">
                             <div class="row">
                                 <div class="col">
-                                    <label>Client</label>
+                                    <label>Client *</label>
                                 </div>
                             </div>
                         </div>
@@ -407,7 +407,7 @@
                 <div class="col mb-3">
                     <div class="row">
                         <div class="col m-1">
-                            <label>Date</label>
+                            <label>Date *</label>
                         </div>
                     </div>
                     <div class="row">
@@ -495,7 +495,7 @@
                         <div class="col m-1">
                             <div class="row">
                                 <div class="col">
-                                    <label>Name</label>
+                                    <label>Name *</label>
                                 </div>
                             </div>
                         </div>
@@ -600,15 +600,15 @@
 
     <div id="detailClient" style="display:none;">
         <div class="container-fluid fixed-top">
-            <div class="row mt-3">
-                <div class="col-2">
-                    <img src="img/symbol_back.svg" width="30" height="30" onclick="backDetailClient()">
+            <div class="row mt-1">
+                <div class="col-1 d-flex align-self-center">
+                    <img src="img/symbol_back.svg" width="30" height="30" onclick="backDetailClient()" title="Back">
                 </div>
-                <div class="col-8 text-center">
-                    <h1 id="detailCustomerTitle"></h1>
+                <div class="col-10 mt-2">
+                    <h1 id="detailCustomerTitle" class="d-flex align-self-center justify-content-center"></h1>
                 </div>
-                <div class="col-2 d-flex justify-content-end">
-                    <img src="img/symbol_more.svg" width="35" height="35">
+                <div class="col-1 d-flex justify-content-end align-self-center">
+                    <img src="img/symbol_more.svg" width="30" height="30" title="More">
                 </div>
             </div>
         </div>
