--- a/index.html
+++ b/index.html
@@ -242,6 +242,13 @@
             <div id="pendingBookings" class="container-fluid"></div>
         </div>
         <div id="PerformedServices" style="display:none;">
+            <div id="noPerformedServices" class="container-fluid" style="display:none;">
+                <div class="row">
+                    <div class="col text-center m-5">
+                        <label>No performed services</label>
+                    </div>
+                </div>
+            </div>
             <div id="performedServicesContainer" class="container-fluid">
 
             </div>
@@ -251,6 +258,13 @@
                 <div class="row">
                     <div class="col m-2">
                         <select id="selectSortClients" class="form-select form-select-sm" onchange="changeSortClients()"></select>
+                    </div>
+                </div>
+            </div>
+            <div id="noClients" class="container-fluid" style="display:none;">
+                <div class="row">
+                    <div class="col text-center m-5">
+                        <label>No clients</label>
                     </div>
                 </div>
             </div>
@@ -607,8 +621,15 @@
                 <div class="col-10 mt-2">
                     <h1 id="detailCustomerTitle" class="d-flex align-self-center justify-content-center"></h1>
                 </div>
-                <div class="col-1 d-flex justify-content-end align-self-center">
-                    <img src="img/symbol_more.svg" width="30" height="30" title="More">
+                <div class="col-1 d-flex justify-content-center align-self-center">
+                    <div class="dropdown">
+                        <img src="img/symbol_more.svg" width="30" height="30" id="dropdownMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <div class="dropdown-menu" aria-labelledby="dropdownMenu">
+                          <button class="dropdown-item" type="button">Action</button>
+                          <button class="dropdown-item" type="button">Another action</button>
+                          <button class="dropdown-item" type="button">Something else here</button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
