--- a/index.html
+++ b/index.html
@@ -631,7 +631,7 @@
                     <h1 id="detailCustomerTitle" class="d-flex align-self-center justify-content-center"></h1>
                 </div>
                 <div class="col-1 d-flex justify-content-center align-self-center">
-                    <div class="dropdown">
+                    <div class="dropdown" tabindex="0">
                         <div style="margin-right: 1rem;">
                             <img src="img/symbol_more.svg" width="30" height="30" title="More actions" onclick="showDropdownMenuClient()">
                         </div>
